PLUGIN_NAME=DBGPerspective
iconsfiles = \
set-breakpoint.xpm \
breakpoint-marker.png \
continue.xpm \
stop-debugger.xpm \
run-debugger.xpm \
line-pointer.xpm \
run-to-cursor.xpm \
step-into.xpm \
step-out.xpm \
step-over.xpm \
throbbler.gif \
green.png

iconsdir = @NEMIVER_PLUGINS_DIR@/$(PLUGIN_NAME)/icons
icons_DATA = $(iconsfiles)

EXTRA_DIST = $(iconsfiles)

