PLUGIN_NAME=dbgperspective
gladefiles = bodycontainer.glade \
runprogramdialog.glade \
proclistdialog.glade \
loadcoredialog.glade \
savedsessionsdialog.glade \
preferencesdialog.glade \
varinspectordialog.glade

gladedir = @NEMIVER_PLUGINS_DIR@/$(PLUGIN_NAME)/glade
glade_DATA = $(gladefiles)

EXTRA_DIST = $(gladefiles)

