PLUGIN_NAME=dbgperspective
iconsfiles = \
set-breakpoint.xpm \
breakpoint-marker.png \
breakpoint-disabled-marker.png \
countpoint-marker.png \
line-pointer.png \
run-to-cursor.xpm \
step-into.xpm \
step-out.xpm \
step-over.xpm \
throbber.gif

iconsdir = @NEMIVER_PLUGINS_DIR@/$(PLUGIN_NAME)/icons
icons_DATA = $(iconsfiles)

EXTRA_DIST = $(iconsfiles)

