PLUGIN_NAME=dbgperspective

menusfiles = \
menus.xml memoryview-menu.xml toolbar.xml \
contextualmenu.xml \
breakpointspopup.xml \
callstackpopup.xml \
varinspectorpopup.xml \
localvarsinspectorpopup.todelete.xml \
localvarsinspectorpopup.xml \
terminalmenu.xml exprmonitorpopup.xml

menusdir = @NEMIVER_PLUGINS_DIR@/$(PLUGIN_NAME)/menus
menus_DATA = $(menusfiles)

EXTRA_DIST = $(menusfiles)

