PLUGIN_NAME=dbgperspective
uifiles = runprogramdialog.ui \
proclistdialog.ui \
loadcoredialog.ui \
savedsessionsdialog.ui \
preferencesdialog.ui \
exprinspectordialog.ui \
findtextdialog.ui \
openfiledialog.ui \
setbreakpointdialog.ui \
chooseoverloadsdialog.ui \
remotetargetdialog.ui \
globalvarsinspector.ui \
callfunctiondialog.ui \
watchpointdialog.ui  \
setjumptodialog.ui

uidir = @NEMIVER_PLUGINS_DIR@/$(PLUGIN_NAME)/ui
ui_DATA = $(uifiles)

EXTRA_DIST = $(uifiles)

